--- a/package.json
+++ b/package.json
@@ -9,15 +9,18 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "babel": "^5.6.14",
-    "babelify": "^6.1.2",
-    "browserify": "^10.2.4",
+    "babel": "^6.5.2",
+    "babel-preset-es2015": "^6.6.0",
+    "babelify": "^7.2.0",
+    "browserify": "^13.0.0",
     "gulp": "^3.9.0",
-    "gulp-connect": "^2.2.0",
+    "gulp-connect": "^3.1.0",
     "vinyl-source-stream": "^1.1.0"
   },
   "dependencies": {
+    "@cycle/core": "^6.0.3",
+    "@cycle/web": "^2.2.2",
     "immutable": "^3.7.4",
-    "lodash": "^3.10.0"
+    "lodash": "^4.6.1"
   }
 }
